Alignment Fixed

--- a/src/views/pages/settings/Integrations/GoogleSheets/EditGoogleSheet/sheet-details.module.scss
+++ b/src/views/pages/settings/Integrations/GoogleSheets/EditGoogleSheet/sheet-details.module.scss
@@ -28,6 +28,9 @@
   max-width: 100%;
   table-layout: fixed;
   border-radius: 8px;
+  @media (max-width: 770px) {
+   margin-left: 1%;
+  }
 }
 
 .tableBody {
