--- a/src/views/pages/settings/Integrations/GoogleSheets/SheetDropdownTable.jsx/SheetDropdownTable.module.scss
+++ b/src/views/pages/settings/Integrations/GoogleSheets/SheetDropdownTable.jsx/SheetDropdownTable.module.scss
@@ -4,6 +4,12 @@
     margin-top: 16px;
     border: 1px solid #e6e6e6;
     width: 100%;
+    @media (max-width: 600px) {
+      width: 98%;
+    }
+    @media (max-width: 401px) {
+      width: 98%;
+    }
 
   }
   
